--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/larshp/actions-stats#readme",
   "dependencies": {
-    "@octokit/rest": "^18.0.6",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "@octokit/rest": "^18.3.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31"
   }
 }
